Added a CTPResponse that contains status and data response info to app layer

--- a/client/Makefile
+++ b/client/Makefile
@@ -8,6 +8,7 @@ CLASSES = \
 		Client.java \
 		Transport.java \
       CTP.java \
+		StateMachine.java\
       message/Ack.java \
 		message/AckConnect.java \
       message/Close.java \
