--- a/client/Makefile
+++ b/client/Makefile
@@ -8,6 +8,9 @@ CLASSES = \
 		Client.java \
 		Transport.java \
       CTP.java \
+		CTPResponse.java \
+		StateMachine.java \
+		ResponseTimer.java \
       message/Ack.java \
 		message/AckConnect.java \
       message/Close.java \
